# Parcel-Locker

./: README.md
project/: CMakeLists.txt
project/program/: CMakeLists.txt
project/program/include/: admindialog.h  checkorders.h  logindialog.h  mainwindow.h  orderdialog.h  parcellockerdialog.h  registerdialog.h  showclientorders.h  showlockersdialog.h
project/program/src/: admindialog.cpp  checkorders.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  orderdialog.cpp  parcellockerdialog.cpp  registerdialog.cpp  showclientorders.cpp  showlockersdialog.cpp
project/program/ui/: admindialog.ui  checkorders.ui  logindialog.ui  mainwindow.ui  orderdialog.ui  parcellockerdialog.ui  registerdialog.ui  showclientorders.ui  showlockersdialog.ui
